--- a/src/locales/et.json
+++ b/src/locales/et.json
@@ -102,7 +102,7 @@
     "messagePlaceholder": "Jaga tagasisidet, teata veast või soovita funktsiooni...",
     "cancel": "Tühista",
     "supportUs": "Toeta meid",
-    "supportDescription": "Kui sulle meeldib Tartu Bussid, võid toetada arendust ostuga kohvi!",
+    "supportDescription": "Kui sulle meeldib see äpp, võid toetada mind ühe kohviga :)",
     "buyMeACoffee": "Osta mulle kohvi",
     "aboutApp": "Rakenduse kohta",
     "privacyFocused": "Privaatsust austav – jälgimist pole",
