fixed arriving times, user location issues, UI, delete cache for app updates etc V1.1.0

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -143,6 +143,7 @@
     "removeFromFavorites": "Remove from favorites",
     "inMinutes": "{{minutes}} min",
     "now": "Now",
+    "arriving": "Arriving",
     "route": "Route",
     "direction": "Direction"
   }
