show hits in settings tab

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -89,6 +89,9 @@
     "mapSettings": "Map Settings",
     "nearbyRadius": "Nearby Radius",
     "nearbyRadiusDescription": "How far to search when finding stops near you",
+    "cityRadius": "City Radius",
+    "cityRadiusDescription": "Maximum distance from city center to show stops on the map",
+    "compact": "Compact",
     "meters": "meters",
     "maxStopsOnMap": "Max Stops on Map",
     "maxStopsDescription": "Maximum number of stops to display on the map (higher = more detail but slower)",
@@ -131,6 +134,8 @@
     "usesDigitransit": "Uses Digitransit API for schedules",
     "usesOSM": "OpenStreetMap for maps",
     "localSettings": "All settings stored locally on your device",
+    "pageCounter": "Simple page visit counter (no personal data collected)",
+    "totalVisits": "Total visits:",
     "cacheManagement": "Cache Management",
     "cacheDescription": "Clear cached data if you experience issues.",
     "softClear": "Soft Clear (Keep Favorites)",
