--- a/src/locales/et.json
+++ b/src/locales/et.json
@@ -89,6 +89,9 @@
     "mapSettings": "Kaardi seaded",
     "nearbyRadius": "Lähedal oleva raadius",
     "nearbyRadiusDescription": "Kui kaugelt otsida lähedalasuvaid peatusi",
+    "cityRadius": "Linna raadius",
+    "cityRadiusDescription": "Maksimaalne kaugus linnakeskusest, kust kaardil peatusi näidata",
+    "compact": "Kompaktne",
     "meters": "meetrit",
     "maxStopsOnMap": "Maksimaalne peatuste arv kaardil",
     "maxStopsDescription": "Maksimaalne peatuste arv kaardil (rohkem = detailsem, kuid aeglasem)",
@@ -131,6 +134,8 @@
     "usesDigitransit": "Äpp kasutab Digitransit API-d sõiduplaanide jaoks",
     "usesOSM": "Äpp kasutab OpenStreetMapsi kaarte",
     "localSettings": "Kõik seaded salvestatud sinu seadmesse",
+    "pageCounter": "Lihtne lehekülastuste loendur (isikuandmeid ei koguta)",
+    "totalVisits": "Kokku külastusi:",
     "cacheManagement": "Vahemälu haldus",
     "cacheDescription": "Tühjenda vahemälu kui koged probleeme.",
     "softClear": "Kerge tühjendamine (Jäta lemmikud)",
