added Ukrainian language option

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -101,6 +101,7 @@
     "languageDescription": "Select application language",
     "estonian": "Estonian",
     "english": "English",
+    "ukrainian": "Ukrainian",
     "veryClose": "Very close",
     "default": "Default",
     "nearby": "Nearby",
