--- a/src/locales/et.json
+++ b/src/locales/et.json
@@ -101,6 +101,7 @@
     "languageDescription": "Vali rakenduse keel",
     "estonian": "Eesti",
     "english": "Inglise",
+    "ukrainian": "Ukraina",
     "veryClose": "Väga lähedal",
     "default": "Vaikimisi",
     "nearby": "Lähedal",
