--- a/src/locales/uk.json
+++ b/src/locales/uk.json
@@ -67,7 +67,8 @@
     "transfer": "пересадка",
     "transfers": "пересадок",
     "walkTo": "Йти до",
-    "nearbyStop": "зупинка поруч"
+    "nearbyStop": "зупинка поруч",
+    "destination": "пункт призначення"
   },
   "favorites": {
     "title": "Обрані зупинки",
@@ -157,10 +158,10 @@
     "title": "Дозвіл на визначення місцезнаходження",
     "description": "Нам потрібне ваше місцезнаходження, щоб показати зупинки поруч та розклад відправлень у реальному часі.",
     "privacyTitle": "Ваша приватність захищена",
-    "noTracking": "Без стеження чи збору даних",
-    "neverStored": "Ваше місцезнаходження ніколи не зберігається і не надсилається на сервери",
-    "localOnly": "Використовується тільки на вашому пристрої для пошуку зупинок поруч",
-    "openSource": "Повністю відкритий код - подивіться код самі",
+    "noTracking": "Ми не стежимо за вами і не збираємо особисті дані",
+    "neverStored": "Ваше місцезнаходження не зберігається - використовується тільки для пошуку зупинок",
+    "localOnly": "Місцезнаходження залишається на вашому пристрої, ми надсилаємо тільки координати для отримання розкладів",
+    "openSource": "Повністю відкритий код - дивіться код на <github>GitHub</github>",
     "canDecline": "Ви можете відмовитись і встановити місцезнаходження вручну на карті, якщо бажаєте.",
     "allow": "Дозволити доступ до місцезнаходження",
     "decline": "Використовувати ручне місцезнаходження"
