--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -20,7 +20,7 @@
     "requestingLocation": "Запрос местоположения...",
     "locationDenied": "Доступ к местоположению запрещен",
     "noStops": "Рядом нет остановок",
-    "distance": "{{distance}}м от вас",
+    "distance": "{{distance}} метров от вас",
     "nextBuses": "Следующие автобусы:",
     "noDepartures": "Нет предстоящих отправлений",
     "refreshing": "Обновление...",
@@ -187,6 +187,16 @@
     "description": "Добавьте на главный экран для быстрого доступа",
     "step1": "Нажмите кнопку Поделиться",
     "step2": "Выберите \"На экран Домой\""
+  },
+  "timePicker": {
+    "title": "Планировать заранее",
+    "date": "Дата",
+    "time": "Время",
+    "useNow": "Использовать текущее время",
+    "apply": "Применить",
+    "viewing": "Просмотр расписания на",
+    "planAhead": "Планировать заранее",
+    "customTimeActive": "Пользовательское время активно"
   },
   "common": {
     "loading": "Загрузка...",
