--- a/src/locales/uk.json
+++ b/src/locales/uk.json
@@ -20,7 +20,7 @@
     "requestingLocation": "Запит місцезнаходження...",
     "locationDenied": "Доступ до місцезнаходження заборонено",
     "noStops": "Поруч немає зупинок",
-    "distance": "{{distance}}м від вас",
+    "distance": "{{distance}} метрів від вас",
     "nextBuses": "Наступні автобуси:",
     "noDepartures": "Немає майбутніх відправлень",
     "refreshing": "Оновлення...",
@@ -187,6 +187,16 @@
     "description": "Додайте на головний екран для швидкого доступу",
     "step1": "Натисніть кнопку Поділитися",
     "step2": "Виберіть \"На головний екран\""
+  },
+  "timePicker": {
+    "title": "Планувати наперед",
+    "date": "Дата",
+    "time": "Час",
+    "useNow": "Використати поточний час",
+    "apply": "Застосувати",
+    "viewing": "Перегляд розкладу на",
+    "planAhead": "Планувати наперед",
+    "customTimeActive": "Користувацький час активний"
   },
   "common": {
     "loading": "Завантаження...",
