--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -103,6 +103,13 @@
     "away": "от вас"
   },
   "settings": {
+    "routeData": "Обновление данных маршрутов",
+    "dataSource": "Источник данных",
+    "bundled": "В комплекте",
+    "routeDataDescription": "Обновите информацию о маршрутах, чтобы получить актуальные автобусные маршруты и остановки.",
+    "updateRoutes": "Обновить маршруты",
+    "note": "Примечание",
+    "routeUpdateNote": "Маршруты автоматически обновляются каждую ночь на GitHub. Размер загрузки примерно 60 МБ.",
     "title": "Настройки",
     "description": "Настройте параметры отслеживания автобусов",
     "appearance": "Внешний вид",
