--- a/src/locales/uk.json
+++ b/src/locales/uk.json
@@ -103,6 +103,13 @@
     "away": "від вас"
   },
   "settings": {
+    "routeData": "Оновлення даних маршрутів",
+    "dataSource": "Джерело даних",
+    "bundled": "У комплекті",
+    "routeDataDescription": "Оновіть інформацію про маршрути, щоб отримати найновіші автобусні маршрути та зупинки.",
+    "updateRoutes": "Оновити маршрути",
+    "note": "Примітка",
+    "routeUpdateNote": "Маршрути автоматично оновлюються щоночі на GitHub. Розмір завантаження приблизно 60 МБ.",
     "title": "Налаштування",
     "description": "Налаштуйте параметри відстеження автобусів",
     "appearance": "Вигляд",
