--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -220,5 +220,11 @@
     "arriving": "Прибывает",
     "route": "Маршрут",
     "direction": "Направление"
+  },
+  "androidPrompt": {
+    "title": "Скачать приложение",
+    "description": "Автобусы Тарту доступны в Google Play. Получите быструю работу и оффлайн-поддержку!",
+    "getApp": "Скачать в Google Play",
+    "dismiss": "Продолжить в браузере"
   }
 }
