--- a/src/locales/uk.json
+++ b/src/locales/uk.json
@@ -220,5 +220,11 @@
     "arriving": "Прибуває",
     "route": "Маршрут",
     "direction": "Напрямок"
+  },
+  "androidPrompt": {
+    "title": "Завантажити додаток",
+    "description": "Автобуси Тарту доступні в Google Play. Отримайте швидку роботу та офлайн-підтримку!",
+    "getApp": "Завантажити з Google Play",
+    "dismiss": "Продовжити в браузері"
   }
 }
